--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "three-webgpu-worker": "^0.0.1-beta"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
