--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threegpu",
+  "name": "three-webgpu-worker",
   "version": "0.0.1-beta",
   "description": "Off-main-thread WebGPU renderer for Three.js using Web Work",
   "main": "./dist/index.js",
@@ -39,7 +39,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sridhar-mani/three-webgpu"
+    "url": "git+https://github.com/sridhar-mani/three-webgpu.git"
   },
   "peerDependencies": {
     "three": ">=0.181.0"
