--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-webgpu-worker",
-  "version": "0.0.11-beta",
+  "version": "0.0.1",
   "description": "Off-main-thread WebGPU renderer for Three.js using Web Work",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -9,7 +9,8 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./worker": "./dist/workerhyb.js"
+    "./worker": "./dist/workerhyb.js",
+    "./dist/*": "./dist/*"
   },
   "files": [
     "dist",
